Fix misaligned footer

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -120,7 +120,7 @@ footer {
   justify-items: center;
   min-height: 2rem;
   margin: 3rem 0 1rem 0;
-  max-width: calc(100% - 2rem);
+  max-width: 100%;
 
   & p {
     margin: 0;
